<?xml version="1.0" encoding="utf-8" ?>

<resources>
    <string name="app_name">Konfiguracja menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world</string>
    <string name="autor">O autorze</string>

    <string name="name">Name:</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone:</string>
    <string name="email">e-mail:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>
